# searchlight

./: .coveragerc  .gitignore  .gitreview  .stestr.conf  .testr.conf  .zuul.yaml  CONTRIBUTING.rst  HACKING.rst  MANIFEST.in  README.md  README.rst  bindep.txt  elasticsearch5.txt  elasticsearch6.txt  lower-constraints.txt  openstack-common.conf  requirements.txt  run_tests.sh  setup.cfg  test-requirements.txt  tox.ini
api-ref/source/: conf.py  http-codes.yaml  index.rst  search-parameters.yaml  searchlight-v1.inc
api-ref/source/samples/: create-search-admin-request.json  create-search-aggregation-request.json  create-search-aggregation-response.json  create-search-all-request.json  create-search-all-response.json  create-search-complex-boolean-request.json  create-search-complex-boolean-response.json  create-search-free-text-request.json  create-search-free-text-response.json  create-search-multiple-type-request.json  create-search-phrase-field-request.json  create-search-phrase-field-response.json  create-search-single-type-request.json  create-search-single-type-response.json  list-facets-all-response-exclude-options.json  list-facets-all-response.json  list-facets-include-fields-response.json  list-facets-type-response.json  list-plugins-response.json
contrib/docker/: Dockerfile  README.rst  docker-compose.example.yml  entrypoint.sh  searchlight.conf
contrib/vagrant/: Vagrantfile  local.conf
devstack/: README.rst  local.conf  local.conf.example  plugin.sh  settings
devstack/gate/: gate_hook.sh  post_test_hook.sh
doc/: requirements.txt
doc/source/: architecture.rst  authentication.rst  authoring-plugins.rst  conf.py  dev-environment.rst  elasticsearch.rst  feature-requests-bugs.rst  index.rst  indexingservice.rst  plugins.rst  searchlightapi.rst  uwsgi.rst
doc/source/admin/: architecture.rst  index.rst  indexingservice.rst
doc/source/cli/: index.rst  searchlight-status.rst
doc/source/configuration/: authentication.rst  index.rst  plugins.rst  policy.rst  sample-policy-yaml.rst
doc/source/contributor/: authoring-plugins.rst  contributing.rst  feature-requests-bugs.rst  index.rst  searchlight-vision.rst  vision-reflection.rst
doc/source/install/: dev-environment.rst  elasticsearch.rst  index.rst  uwsgi.rst
doc/source/plugins/: cinder.rst  designate.rst  glance.rst  neutron.rst  nova.rst  swift.rst
doc/source/user/: index.rst  searchlightapi.rst  usecases.rst
etc/: apache-searchlight.template  api-paste.ini  policy.json  property-protections-policies.conf.sample  searchlight-api-paste.ini  searchlight-api.conf  searchlight-uwsgi.ini.sample
etc/oslo-config-generator/: searchlight-api.conf  searchlight.conf
etc/oslo-policy-generator/: searchlight.conf
releasenotes/notes/: add-0_2_1-notes-e1f8910ad27d88bb.yaml  add-devstack-elasticsearch-5x-48934b931a31c823.yaml  add-nova-microversion-support-8b40da4458678f20.yaml  add-server-group-notification-handler-d10aed78bede2c12.yaml  add-server-groups-plugin-3dff1b85a3f716f5.yaml  bp-add-region-name-69fbe5b84b2883c6.yaml  bp-allow-aggregation-queries-fd7d39cb33068be1.yaml  bp-allow-reindexing-into-new-mapping-bd78e94842fd2705.yaml  bp-cinder-plugin-faf8eed2c5d3a7eb.yaml  bp-configurable-index-settings-59e00230f669c1a8.yaml  bp-disoverable-resource-type-relationships-d697d0aa6648a560.yaml  bp-expose-version-be6403da43341c98.yaml  bp-facet-totals-369e7cd81b15f658.yaml  bp-flavor-notifications-c9454eb39ab8f567.yaml  bp-flavor-plugin.yaml  bp-hypervisor-plugin-5d17ed1005004b43.yaml  bp-index-performance-enhancement-c8dc21da98f45628.yaml  bp-index-role-separation-535e01ba3bb2252e.yaml  bp-indexing-type-wildcard-94c38a719a9210af.yaml  bp-ironic-plugin-922204f24ecb2f16.yaml  bp-neutron-floatingip-1291f3a76f0e4aed.yaml  bp-neutron-plugin-5c14dd556457c1dc.yaml  bp-neutron-securitygroup-6c1531e9f80030bd.yaml  bp-neutron-tenant-rbac-0922f23111965f7c.yaml  bp-nova-versioned-notifications-ffa01feeaf688414.yaml  bp-orphaned-es-aliases-24c5b5dcd2eb3a41.yaml  bp-per-resource-type-policy-control-ada396f612d75c5b.yaml  bp-pipeline-architecture-dc2d10d5609af1f9.yaml  bp-reduce-nova-api-calls-64eef45bd19fa89c.yaml  bp-reenable-multiple-indices-3c05b9dde9d45d62.yaml  bp-reindex-interval-a43c37189e948d28.yaml  bp-remove-index-api-df875bd8637bb675.yaml  bp-support-service-policy-files-c7e5eeb83c6f4126.yaml  bp-swift-plugin-f19776bcd35ff69d.yaml  bp-wsgi-deployment-54b6e07122f61147.yaml  bp-zero-downtime-reindexing-a607d52b8711d845.yaml  bug-1532972-9cd5c31e976faf81.yaml  bug-1545069-project-id-f8fe895ecce095ff.yaml  bug-1547118-3cfde976f32c3b5c.yaml  bug-1557778-facet-options-798bba4cb4e3067a.yaml  (+21 more)
releasenotes/source/: conf.py  index.rst
releasenotes/source/locale/: releasenotes.pot
searchlight/: context.py  gateway.py  i18n.py  listener.py  notifier.py  opts.py  pipeline.py  plugin.py  schema.py  service.py  service_policies.py  version.py
searchlight/api/: common.py  policy.py  property_protections.py  versions.py  wsgi.py
searchlight/api/middleware/: context.py  gzip.py  version_negotiation.py
searchlight/api/v1/: router.py  search.py
searchlight/cmd/: __init__.py  agent_notification.py  api.py  control.py  index.py  listener.py  manage.py  status.py
searchlight/common/: auth.py  client.py  config.py  exception.py  jsonpatchvalidator.py  property_utils.py  resource_types.py  rpc.py  utils.py  wsgi.py  wsme_utils.py
searchlight/common/policies/: __init__.py  base.py  resource.py  search.py
searchlight/elasticsearch/: __init__.py
searchlight/elasticsearch/plugins/: base.py  helper.py  images.py  images_notification_handler.py  metadefs.py  metadefs_notification_handler.py  (+2 more)
searchlight/hacking/: checks.py
searchlight/locale/: searchlight-log-error.pot  searchlight-log-info.pot  searchlight-log-warning.pot  searchlight.pot
searchlight/publisher/: log.py
searchlight/tests/: __init__.py  fake_plugins.py  utils.py
test-scripts/: README.rst  generate-swift-data.py  image_member_test.sh  listener.py  resources.sh
tools/: check_translate.sh  colorizer.py  install_venv.py  install_venv_common.py  test-setup.sh
(+157 files in other folders)
