[metadata]
name = searchlight
summary = OpenStack Search Service
description-file =
    README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = http://docs.openstack.org/developer/searchlight/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.4

[entry_points]
console_scripts =
    searchlight-api = searchlight.cmd.api:main
    searchlight-control = searchlight.cmd.control:main
    searchlight-listener = searchlight.cmd.listener:main
    searchlight-manage = searchlight.cmd.manage:main
oslo.config.opts =
    searchlight = searchlight.opts:list_opts
oslo.config.opts.defaults =
    searchlight-api = searchlight.common.config:set_cors_middleware_defaults
searchlight.index_backend =
    os_glance_image = searchlight.elasticsearch.plugins.glance.images:ImageIndex
    os_glance_metadef = searchlight.elasticsearch.plugins.glance.metadefs:MetadefIndex
    os_nova_server = searchlight.elasticsearch.plugins.nova.servers:ServerIndex
    os_neutron_network = searchlight.elasticsearch.plugins.neutron.networks:NetworkIndex
    os_neutron_port = searchlight.elasticsearch.plugins.neutron.ports:PortIndex
    os_designate_recordset = searchlight.elasticsearch.plugins.designate.recordsets:RecordSetIndex
    os_designate_zone = searchlight.elasticsearch.plugins.designate.zones:ZoneIndex

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[compile_catalog]
directory = searchlight/locale
domain = searchlight

[update_catalog]
domain = searchlight
output_dir = searchlight/locale
input_file = searchlight/locale/searchlight.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = searchlight/locale/searchlight.pot
